# citimock

./: Cargo.toml  build.rs  db.ddl  xmlsec_wrapper.h
.cargo/: config.toml
certs/: csr.conf  genkey.sh
src/: config.rs  lib.rs  main.rs
src/certificates/: cert_manager.rs  mod.rs  utils.rs
src/extractors/: basic_auth.rs  mod.rs  xml.rs  xml_plain.rs
src/handlers/: authentication.rs
src/layers/: authentication.rs  authentication_check.rs  document_decryption.rs  document_encryption.rs  document_signature_verifier.rs  document_signing.rs  mod.rs
src/models/: client.rs  errors.rs
src/services/: authentication_layer.rs  cert_manager_service.rs  client_service.rs  document_decryption_service.rs  document_encryption_service.rs  document_service_utils.rs  document_signature_verifier_service.rs  document_signing_service.rs  jwt_service.rs  mod.rs
templates/: encryption.xml  signing.xml
