[package]
name = "citimock"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.12"
axum-server = { version = "0.4.7", features = ["tls-openssl"] }
base64 = "0.21.0"
hyper = "0.14.25"
itertools = "0.10.5"
openssl = "0.10.49"
openssl-sys = "0.9.84"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-openssl = "0.6.3"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }

[build-dependencies]
bindgen = { version = "^0.64.0" }
