[package]
name = "citimock"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
axum-server = { version = "0.4.7", features = ["tls-openssl"] }
base64 = "0.21.0"
futures-util = "0.3.28"
hyper = "0.14.25"
itertools = "0.10.5"
libpasta = "0.1.2"
openssl = "0.10.49"
openssl-sys = "0.9.84"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "any", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
tokio-openssl = "0.6.3"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }
yaserde = "0.8.0"
yaserde_derive = "0.8.0"

[build-dependencies]
bindgen = { version = "^0.64.0" }

[profile.release]
debug = true
